--- a/public/css/4-sections/_scoreboard.sass
+++ b/public/css/4-sections/_scoreboard.sass
@@ -1,5 +1,4 @@
 .scoreboard
-	background-color: pink
 	flex-grow: 1
 
 	@media (min-width: 660px)
