--- a/public/css/4-sections/_timer.sass
+++ b/public/css/4-sections/_timer.sass
@@ -1,3 +1,2 @@
 .timer
 	flex-grow: 1
-	background-color: cyan
